--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C2J4QH6D3K"></script>
@@ -35,7 +35,7 @@
             <p class="text-xl text-gray-600 max-w-2xl mx-auto">Diseñador/Programador Web con sólida experiencia en marketing digital; orientado al trabajo en equipo y mejoramiento continuo, así como con facilidad de expresión verbal y escrita.</p>
            
             <div class="mt-8 flex flex-wrap justify-center gap-2">
-                <a href="#portfolio" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg mr-4 transition duration-300">Ver Portafolio</a>
+                <a href="#portfolio" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg mr-4 transition duration-300">Portafolio</a>
                 <!--<a href="#contact" class="border border-indigo-600 text-indigo-600 hover:bg-indigo-50 px-6 py-3 rounded-lg transition duration-300">Contactame</a>-->
                 <button id="darkModeToggle" class="bg-gray-200 hover:bg-gray-300 text-gray-800 px-6 py-3 rounded-lg transition duration-300 flex items-center gap-2">
                     <i data-feather="moon"></i>
