image profile from png to webp

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Hero Section -->
         <section class="text-center py-20">
             <div class="w-full text-center">
-                <img src="assets/profile-lionso.png" class="mx-auto" alt="Lio">
+                <img src="assets/profile-lionso.webp" class="mx-auto" alt="Lio">
             </div>
 
             <h1 class="text-5xl font-bold mb-4">Hola, soy <span class="text-blue-600">Lionso</span></h1>
