--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="assets/profile-lionso.webp" class="mx-auto" alt="Lio">
             </div>
 
-            <h1 class="text-5xl font-bold mb-4">Hola, soy <span class="text-blue-600">Lionso</span></h1>
+            <h1 class="text-5xl font-bold mb-4 text-gray-600">Hola, soy <span class="text-blue-600">Lionso</span></h1>
             <p class="text-xl text-gray-600 max-w-2xl mx-auto">Diseñador/Programador Web con sólida experiencia en marketing digital; orientado al trabajo en equipo y mejoramiento continuo, así como con facilidad de expresión verbal y escrita.</p>
            
             <div class="mt-8 flex flex-wrap justify-center gap-2">
