--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </nav>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?rand=2"></script>
     <script>
         feather.replace();
     </script>
