--- a/index.html
+++ b/index.html
@@ -109,15 +109,12 @@
             </a>
             <a href="#portfolio" class="mobile-nav-item">
                 <i data-feather="grid" class="mobile-nav-icon"></i>
-                <span>Work</span>
+                <span>Portafolio</span>
             </a>
-            <a href="#about" class="mobile-nav-item">
-                <i data-feather="user" class="mobile-nav-icon"></i>
-                <span>About</span>
-            </a>
+           
             <a href="#contact" class="mobile-nav-item">
                 <i data-feather="mail" class="mobile-nav-icon"></i>
-                <span>Contact</span>
+                <span>Contacto</span>
             </a>
         </nav>
     </div>
